Sec9_Chap98-XX: upgraded code to 4.0.0